gnome: save latest settings

--- a/gnome-settings/.config/dconf/settings.ini
+++ b/gnome-settings/.config/dconf/settings.ini
@@ -1,3 +1,6 @@
+[desktop/ibus/panel/emoji]
+hotkey=['<Control>semicolon']
+
 [org/gnome/GWeather]
 temperature-unit='centigrade'
 
@@ -9,8 +12,16 @@ subtitle-encoding='UTF-8'
 locations=[<(uint32 2, <('London Borough of Haringey, United Kingdom', '', false, [(0.90037923017036436, -0.0018397534144189839)], [(0.89884456477707964, -0.0020362232784242244)])>)>]
 
 [org/gnome/baobab/ui]
-window-size=(960, 1048)
+is-maximized=false
+window-size=(1472, 1080)
 window-state=87168
+
+[org/gnome/boxes]
+first-run=false
+view='icon-view'
+window-maximized=false
+window-position=[960, 32]
+window-size=[960, 1048]
 
 [org/gnome/calculator]
 accuracy=9
@@ -24,27 +35,29 @@ source-currency=''
 source-units='degree'
 target-currency=''
 target-units='radian'
-window-position=(973, 224)
+window-position=(1888, 0)
 word-size=64
 
 [org/gnome/cheese]
 burst-delay=1000
-camera='Integrated Camera  Integrated C'
-photo-x-resolution=640
-photo-y-resolution=480
-video-x-resolution=640
-video-y-resolution=480
+camera='USB 2.0 Camera'
+photo-x-resolution=1920
+photo-y-resolution=1080
+video-x-resolution=1920
+video-y-resolution=1080
 
 [org/gnome/clocks]
-world-clocks=[{'location': <(uint32 2, <('San Francisco', 'KOAK', false, [(0.65832848982162007, -2.133408063190589)], [(0.65832848982162007, -2.133408063190589)])>)>}, {'location': <(uint32 2, <('Bogotá', 'SKBO', true, [(0.082321368870163392, -1.2941616403537954)], [(0.080285145591739146, -1.2929980817013682)])>)>}, {'location': <(uint32 2, <('London', 'EGWU', false, [(0.89971722940307675, -0.007272211034407213)], [(0.89971722940307675, -0.007272211034407213)])>)>}, {'location': <(uint32 2, <('Bilbao', 'LEBB', true, [(0.75572756611354464, -0.051196318907402824)], [(0.75485490148754752, -0.051778106960262617)])>)>}]
+world-clocks=[{'location': <(uint32 2, <('San Francisco', 'KOAK', false, [(0.65832848982162007, -2.133408063190589)], [(0.65832848982162007, -2.133408063190589)])>)>}, {'location': <(uint32 2, <('Bogotá', 'SKBO', true, [(0.082321368870163392, -1.2941616403537954)], [(0.080285145591739146, -1.2929980817013682)])>)>}, {'location': <(uint32 2, <('Washington', 'KDCA', false, [(0.67803131976116615, -1.3444998506811625)], [(0.67803131976116615, -1.3444998506811625)])>)>}, {'location': <(uint32 2, <('Coordinated Universal Time (UTC)', '@UTC', false, @a(dd) [], @a(dd) [])>)>}, {'location': <(uint32 2, <('London', 'EGWU', false, [(0.89971722940307675, -0.007272211034407213)], [(0.89971722940307675, -0.007272211034407213)])>)>}, {'location': <(uint32 2, <('Bilbao', 'LEBB', true, [(0.75572756611354464, -0.051196318907402824)], [(0.75485490148754752, -0.051778106960262617)])>)>}]
 
 [org/gnome/clocks/state/window]
+maximized=false
 panel-id='world'
-size=(960, 524)
+size=(960, 1048)
 state=87168
 
 [org/gnome/control-center]
 last-panel='bluetooth'
+window-state=(1920, 1048, false)
 
 [org/gnome/desktop/a11y/magnifier]
 mag-factor=2.0
@@ -63,6 +76,9 @@ categories=['X-SuSE-YaST']
 name='suse-yast.directory'
 translate=true
 
+[org/gnome/desktop/background]
+picture-uri='file:///usr/share/backgrounds/gnome/adwaita-d.jpg'
+
 [org/gnome/desktop/calendar]
 show-weekdate=true
 
@@ -76,9 +92,10 @@ xkb-options=['lv3:ralt_switch']
 [org/gnome/desktop/interface]
 clock-show-seconds=true
 clock-show-weekday=true
+color-scheme='prefer-dark'
+enable-hot-corners=false
 font-antialiasing='grayscale'
 font-hinting='slight'
-gtk-im-module='gtk-im-context-simple'
 gtk-theme='Adwaita-dark'
 show-battery-percentage=true
 
@@ -88,11 +105,20 @@ autorun-x-content-open-folder=@as []
 autorun-x-content-start-app=['x-content/unix-software', 'x-content/ostree-repository', 'x-content/audio-player']
 
 [org/gnome/desktop/notifications]
-application-children=['gnome-power-panel', 'telegramdesktop', 'firefox-developer-edition', 'org-keepassxc-keepassxc', 'org-gnome-tweaks', 'teams', 'zoom', 'org-gnome-nautilus', 'libreoffice-calc', 'slack', 'gnome-network-panel', 'org-gnome-baobab', 'pycharm-professional']
+application-children=['gnome-power-panel', 'telegramdesktop', 'firefox-developer-edition', 'org-keepassxc-keepassxc', 'org-gnome-tweaks', 'teams', 'zoom', 'org-gnome-nautilus', 'libreoffice-calc', 'slack', 'gnome-network-panel', 'org-gnome-baobab', 'pycharm-professional', 'google-chrome', 'signal-desktop-beta', 'visual-studio-code-insiders', 'alacritty', 'io-dbeaver-dbeaver', 'postman', 'gimp', 'org-gnome-settings', 'org-gnome-fileroller', 'com-github-xournalpp-xournalpp', 'org-gnome-eog']
 show-banners=true
+
+[org/gnome/desktop/notifications/application/alacritty]
+application-id='Alacritty.desktop'
+
+[org/gnome/desktop/notifications/application/com-github-xournalpp-xournalpp]
+application-id='com.github.xournalpp.xournalpp.desktop'
 
 [org/gnome/desktop/notifications/application/firefox-developer-edition]
 application-id='firefox-developer-edition.desktop'
+
+[org/gnome/desktop/notifications/application/gimp]
+application-id='gimp.desktop'
 
 [org/gnome/desktop/notifications/application/gnome-network-panel]
 application-id='gnome-network-panel.desktop'
@@ -100,14 +126,29 @@ application-id='gnome-network-panel.desktop'
 [org/gnome/desktop/notifications/application/gnome-power-panel]
 application-id='gnome-power-panel.desktop'
 
+[org/gnome/desktop/notifications/application/google-chrome]
+application-id='google-chrome.desktop'
+
+[org/gnome/desktop/notifications/application/io-dbeaver-dbeaver]
+application-id='io.dbeaver.DBeaver.desktop'
+
 [org/gnome/desktop/notifications/application/libreoffice-calc]
 application-id='libreoffice-calc.desktop'
 
 [org/gnome/desktop/notifications/application/org-gnome-baobab]
 application-id='org.gnome.baobab.desktop'
 
+[org/gnome/desktop/notifications/application/org-gnome-eog]
+application-id='org.gnome.eog.desktop'
+
+[org/gnome/desktop/notifications/application/org-gnome-fileroller]
+application-id='org.gnome.FileRoller.desktop'
+
 [org/gnome/desktop/notifications/application/org-gnome-nautilus]
 application-id='org.gnome.Nautilus.desktop'
+
+[org/gnome/desktop/notifications/application/org-gnome-settings]
+application-id='org.gnome.Settings.desktop'
 
 [org/gnome/desktop/notifications/application/org-gnome-tweaks]
 application-id='org.gnome.tweaks.desktop'
@@ -115,8 +156,14 @@ application-id='org.gnome.tweaks.desktop'
 [org/gnome/desktop/notifications/application/org-keepassxc-keepassxc]
 application-id='org.keepassxc.KeePassXC.desktop'
 
+[org/gnome/desktop/notifications/application/postman]
+application-id='postman.desktop'
+
 [org/gnome/desktop/notifications/application/pycharm-professional]
 application-id='pycharm-professional.desktop'
+
+[org/gnome/desktop/notifications/application/signal-desktop-beta]
+application-id='signal-desktop-beta.desktop'
 
 [org/gnome/desktop/notifications/application/slack]
 application-id='slack.desktop'
@@ -126,6 +173,9 @@ application-id='teams.desktop'
 
 [org/gnome/desktop/notifications/application/telegramdesktop]
 application-id='telegramdesktop.desktop'
+
+[org/gnome/desktop/notifications/application/visual-studio-code-insiders]
+application-id='visual-studio-code-insiders.desktop'
 
 [org/gnome/desktop/notifications/application/zoom]
 application-id='Zoom.desktop'
@@ -139,6 +189,14 @@ natural-scroll=false
 speed=-0.080882352941176516
 tap-to-click=true
 two-finger-scrolling-enabled=true
+
+[org/gnome/desktop/privacy]
+old-files-age=uint32 30
+recent-files-max-age=-1
+
+[org/gnome/desktop/search-providers]
+disabled=['org.gnome.Contacts.desktop', 'org.gnome.Calendar.desktop', 'org.gnome.Photos.desktop', 'org.gnome.Software.desktop', 'org.gnome.Epiphany.desktop']
+sort-order=['org.gnome.Contacts.desktop', 'org.gnome.Documents.desktop', 'org.gnome.Nautilus.desktop']
 
 [org/gnome/desktop/session]
 idle-delay=uint32 0
@@ -165,10 +223,20 @@ unmaximize=@as []
 button-layout='appmenu:close'
 num-workspaces=7
 
+[org/gnome/eog/view]
+background-color='rgb(0,0,0)'
+use-background-color=true
+
 [org/gnome/epiphany/state]
 is-maximized=false
 window-position=(-1, -1)
-window-size=(960, 1048)
+window-size=(480, 524)
+
+[org/gnome/evince]
+document-directory=@ms 'file:///home/dtg/Downloads'
+
+[org/gnome/evince/default]
+window-ratio=(3.2253946068714341, 1.2448182066540761)
 
 [org/gnome/evolution-data-server]
 migrated=true
@@ -176,25 +244,43 @@ network-monitor-gio-name=''
 
 [org/gnome/file-roller/listing]
 list-mode='as-folder'
-name-column-width=250
+name-column-width=455
 show-path=false
 sort-method='name'
 sort-type='ascending'
 
 [org/gnome/file-roller/ui]
 sidebar-width=200
-window-height=480
-window-width=600
+window-height=341
+window-width=380
+
+[org/gnome/gnome-screenshot]
+delay=2
+include-pointer=true
+last-save-directory='file:///home/dtg/Pictures'
+
+[org/gnome/gnome-system-monitor]
+maximized=false
+network-total-in-bits=false
+show-dependencies=false
+show-whose-processes='user'
+window-state=(1824, 1080, 736, 0)
+
+[org/gnome/gnome-system-monitor/disktreenew]
+col-6-visible=true
+col-6-width=0
 
 [org/gnome/meld]
 folder-status-filters=['normal', 'normal', 'new', 'modified']
 
 [org/gnome/meld/window-state]
-height=1011
-width=960
+height=503
+is-maximized=true
+width=736
 
 [org/gnome/mutter]
 dynamic-workspaces=false
+edge-tiling=false
 
 [org/gnome/mutter/keybindings]
 toggle-tiled-left=@as []
@@ -202,6 +288,9 @@ toggle-tiled-right=@as []
 
 [org/gnome/nautilus/compression]
 default-compression-format='zip'
+
+[org/gnome/nautilus/icon-view]
+default-zoom-level='larger'
 
 [org/gnome/nautilus/list-view]
 default-zoom-level='small'
@@ -214,8 +303,17 @@ search-view='list-view'
 [org/gnome/nautilus/window-state]
 initial-size=(960, 1048)
 maximized=false
+sidebar-width=167
+
+[org/gnome/nm-applet/eap/339ccfed-266a-4fba-8858-e1db9f051ead]
+ignore-ca-cert=false
+ignore-phase2-ca-cert=false
 
 [org/gnome/nm-applet/eap/3a2c1734-e409-40e1-a2ba-0f311ec7ccde]
+ignore-ca-cert=false
+ignore-phase2-ca-cert=false
+
+[org/gnome/nm-applet/eap/a102b1a3-849d-4c7c-8a66-0e9a7ca41faa]
 ignore-ca-cert=false
 ignore-phase2-ca-cert=false
 
@@ -227,9 +325,13 @@ ignore-phase2-ca-cert=false
 ignore-ca-cert=false
 ignore-phase2-ca-cert=false
 
+[org/gnome/nm-applet/eap/fa441d2f-68ad-4e7f-ac3c-c16820502924]
+ignore-ca-cert=false
+ignore-phase2-ca-cert=false
+
 [org/gnome/settings-daemon/plugins/color]
-night-light-enabled=true
-night-light-temperature=uint32 2700
+night-light-enabled=false
+night-light-temperature=uint32 2383
 
 [org/gnome/settings-daemon/plugins/power]
 idle-dim=false
@@ -237,10 +339,11 @@ power-button-action='suspend'
 sleep-inactive-ac-type='nothing'
 
 [org/gnome/shell]
-command-history=['tmux', 'r']
+command-history=['tmux', '2', 'R', 'r']
+disable-extension-version-validation=true
 disable-user-extensions=false
-disabled-extensions=['apps-menu@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'screenshot-window-sizer@gnome-shell-extensions.gcampax.github.com', 'window-list@gnome-shell-extensions.gcampax.github.com', 'windowsNavigator@gnome-shell-extensions.gcampax.github.com']
-enabled-extensions=['pop-shell@system76.com', 'workspace-indicator@gnome-shell-extensions.gcampax.github.com', 'sound-output-device-chooser@kgshank.net', 'clipboard-indicator@tudmotu.com', 'freon@UshakovVasilii_Github.yahoo.com']
+disabled-extensions=['apps-menu@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'screenshot-window-sizer@gnome-shell-extensions.gcampax.github.com', 'window-list@gnome-shell-extensions.gcampax.github.com', 'windowsNavigator@gnome-shell-extensions.gcampax.github.com', 'workspace-indicator@gnome-shell-extensions.gcampax.github.com']
+enabled-extensions=['pop-shell@system76.com', 'sound-output-device-chooser@kgshank.net', 'clipboard-indicator@tudmotu.com', 'freon@UshakovVasilii_Github.yahoo.com']
 favorite-apps=['Alacritty.desktop', 'visual-studio-code-insiders.desktop', 'firefox-developer-edition.desktop', 'telegramdesktop.desktop', 'org.gnome.Nautilus.desktop', 'google-chrome.desktop', 'org.keepassxc.KeePassXC.desktop']
 had-bluetooth-devices-setup=true
 welcome-dialog-last-shown-version='40.3'
@@ -256,25 +359,41 @@ active-hint=true
 gap-inner=uint32 0
 gap-outer=uint32 0
 hint-color-rgba='rgba(251,184,108,0.422297)'
+log-level=uint32 4
+show-title=true
 smart-gaps=false
 tile-by-default=true
 
 [org/gnome/shell/extensions/sound-output-device-chooser]
 hide-on-single-device=false
-ports-settings='{"version":2,"ports":[]}'
+ports-settings='{"version":3,"ports":[]}'
 
 [org/gnome/shell/weather]
 automatic-location=true
-locations=[<(uint32 2, <('Málaga', 'LEMG', true, [(0.63995406488235163, -0.078248922313314942)], [(0.64082672950834885, -0.077085381114180396)])>)>]
+locations=[<(uint32 2, <('London Borough of Haringey, United Kingdom', '', false, [(0.90037923017036436, -0.0018397534144189839)], [(0.89884456477707964, -0.0020362232784242244)])>)>]
 
 [org/gnome/shell/world-clocks]
-locations=[<(uint32 2, <('San Francisco', 'KOAK', false, [(0.65832848982162007, -2.133408063190589)], [(0.65832848982162007, -2.133408063190589)])>)>, <(uint32 2, <('Bogotá', 'SKBO', true, [(0.082321368870163392, -1.2941616403537954)], [(0.080285145591739146, -1.2929980817013682)])>)>, <(uint32 2, <('London', 'EGWU', false, [(0.89971722940307675, -0.007272211034407213)], [(0.89971722940307675, -0.007272211034407213)])>)>, <(uint32 2, <('Bilbao', 'LEBB', true, [(0.75572756611354464, -0.051196318907402824)], [(0.75485490148754752, -0.051778106960262617)])>)>]
+locations=[<(uint32 2, <('San Francisco', 'KOAK', false, [(0.65832848982162007, -2.133408063190589)], [(0.65832848982162007, -2.133408063190589)])>)>, <(uint32 2, <('Bogotá', 'SKBO', true, [(0.082321368870163392, -1.2941616403537954)], [(0.080285145591739146, -1.2929980817013682)])>)>, <(uint32 2, <('Washington', 'KDCA', false, [(0.67803131976116615, -1.3444998506811625)], [(0.67803131976116615, -1.3444998506811625)])>)>, <(uint32 2, <('Coordinated Universal Time (UTC)', '@UTC', false, @a(dd) [], @a(dd) [])>)>, <(uint32 2, <('London', 'EGWU', false, [(0.89971722940307675, -0.007272211034407213)], [(0.89971722940307675, -0.007272211034407213)])>)>, <(uint32 2, <('Bilbao', 'LEBB', true, [(0.75572756611354464, -0.051196318907402824)], [(0.75485490148754752, -0.051778106960262617)])>)>]
 
 [org/gnome/software]
-check-timestamp=int64 1635057244
+check-timestamp=int64 1660552376
+first-run=false
 
 [org/gnome/tweaks]
 show-extensions-notice=false
+
+[org/gtk/gtk4/settings/file-chooser]
+date-format='regular'
+location-mode='path-bar'
+show-hidden=false
+show-size-column=true
+show-type-column=true
+sidebar-width=170
+sort-column='name'
+sort-directories-first=false
+sort-order='ascending'
+type-format='category'
+window-size=(1920, 1048)
 
 [org/gtk/settings/color-chooser]
 custom-colors=[(0.98431372549019602, 0.72156862745098038, 0.42352941176470582, 0.42229729729729731), (0.98431372549019602, 0.72156862745098038, 0.42352941176470588, 0.68918900000000005), (0.98431372549019602, 0.72156862745098038, 0.42352941176470582, 0.68918918918918914), (0.98431372549019602, 0.72156862745098038, 0.42352941176470588, 1.0)]
@@ -283,13 +402,16 @@ selected-color=(true, 0.98431372549019602, 0.72156862745098038, 0.42352941176470
 [org/gtk/settings/file-chooser]
 date-format='regular'
 location-mode='path-bar'
-show-hidden=false
+show-hidden=true
 show-size-column=true
 show-type-column=true
-sidebar-width=348
-sort-column='type'
+sidebar-width=256
+sort-column='modified'
 sort-directories-first=false
-sort-order='ascending'
+sort-order='descending'
 type-format='category'
-window-position=(239, 66)
-window-size=(1203, 902)
+window-position=(794, 65)
+window-size=(972, 902)
+
+[system/proxy]
+mode='none'
