t: restore CSS entries

--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -18,6 +18,16 @@
       ]
     },
     {
+      "id": 174067391,
+      "name": "CSS Investments",
+      "entries": [
+        "Coding",
+        "General",
+        "Meeting",
+        "Preparation (no charge)"
+      ]
+    },
+    {
       "id": 179948465,
       "name": "BBM",
       "entries": [
