--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -5,6 +5,7 @@
   "diffEditor.renderSideBySide": true,
   "diffEditor.renderIndicators": true,
   // "editor.fontFamily": "'Ubuntu Mono', Consolas, 'Courier New', monospace",
+  "editor.experimental.stickyScroll.enabled": true,
   // "editor.glyphMargin": false,  // get ridd off infrequently used area
   "editor.hover.delay": 600,
   // "editor.lineNumbers": "off", // get ridd off infrequently used area
