t: add entry for mentoring

--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -3,7 +3,7 @@
     {
       "id": 28787086,
       "name": "Learn and study",
-      "entries": ["Coding", "Study coding", "Drawing"]
+      "entries": ["Coding", "Study coding", "Drawing", "Mentoring"]
     },
     {
       "id": 171740062,
