vscode: format Rust files on save

--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -126,6 +126,12 @@
   "python.languageServer": "Pylance",
   "python.terminal.activateEnvironment": false,
 
+  "[rust]": {
+    "editor.codeLens": true,
+    "editor.formatOnSave": true,
+    "editor.insertSpaces": true,
+  },
+
   "[shellscript]": {
     "editor.codeLens": true,
     "editor.insertSpaces": true,
