vscode: update Telemetry related settings

--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -47,8 +47,7 @@
     "**/.venv": true,
   },
 
-  "telemetry.enableCrashReporter": false,
-  "telemetry.enableTelemetry": false,
+  "telemetry.telemetryLevel": "off",
 
   "terminal.integrated.rendererType": "dom", // https://code.visualstudio.com/docs/editor/integrated-terminal#_changing-how-the-terminal-is-rendered
   "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
