--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -16,35 +16,10 @@ font:
   # and the height of the emulator window
   size: 9.0
 
-# Colors (One Dark)
-# Source: https://github.com/eendroroy/alacritty-theme/blob/master/themes/one_dark.yaml
-colors:
-  # Default colors
-  primary:
-    background: '0x1e2127'
-    foreground: '0xabb2bf'
-
-  # Normal colors
-  normal:
-    black:   '0x1e2127'
-    red:     '0xe06c75'
-    green:   '0x98c379'
-    yellow:  '0xd19a66'
-    blue:    '0x61afef'
-    magenta: '0xc678dd'
-    cyan:    '0x56b6c2'
-    white:   '0xabb2bf'
-
-  # Bright colors
-  bright:
-    black:   '0x5c6370'
-    red:     '0xe06c75'
-    green:   '0x98c379'
-    yellow:  '0xd19a66'
-    blue:    '0x61afef'
-    magenta: '0xc678dd'
-    cyan:    '0x56b6c2'
-    white:   '0xffffff'
+# Themes
+import:
+  - ~/.config/alacritty/themes/one_dark.yml
+  # - ~/.config/alacritty/themes/solarized_light.yml
 
 hints:
   enabled:
