--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -38,3 +38,9 @@ disabled = true
 ssh_only = false
 format = "[$hostname](dimmed) "
 disabled = false
+
+[memory_usage]
+threshold = 1
+format = 'm:[${ram_pct}]($style) '
+symbol = ""
+disabled = false
