starship: show gcp profile

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -49,3 +49,7 @@ threshold = 1
 format = 'm:[${ram_pct}]($style) '
 symbol = ""
 disabled = false
+
+[gcloud]
+disabled = false
+format = '[$active]($style) '
