t: add entry for reflections

--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -32,7 +32,7 @@
     {
       "id": 107456600,
       "name": "Health and training",
-      "entries": ["Meditate", "Training", "Stretching"]
+      "entries": ["Meditate", "Training", "Stretching", "Reflect"]
     }
   ]
 }
