keepassxc: update config

--- a/keepassxc/.config/keepassxc/keepassxc.ini
+++ b/keepassxc/.config/keepassxc/keepassxc.ini
@@ -26,13 +26,13 @@ QuietSuccess=true
 [PasswordGenerator]
 AdditionalChars=
 AdvancedMode=true
-Braces=true
-Dashes=true
+Braces=false
+Dashes=false
 ExcludedChars=
-Length=24
-Logograms=true
-Math=true
-Type=0
+Length=20
+Logograms=false
+Math=false
+Type=1
 WordCount=9
 
 [Security]
