t: add entries for social

--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -30,6 +30,14 @@
       ]
     },
     {
+      "id": 193300215,
+      "name": "Social",
+      "entries": [
+        "Looking for new people",
+        "Meet people"
+      ]
+    },
+    {
       "id": 107456600,
       "name": "Health and training",
       "entries": ["Meditate", "Training", "Stretching", "Reflect"]
