vscode: update user dictionary

--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -2,7 +2,6 @@
   "breadcrumbs.enabled": true,
 
   "css.validate": false,
-  "diffEditor.ignoreTrimWhitespace": false,
   "diffEditor.renderIndicators": true,
   "diffEditor.renderSideBySide": true,
   "editor.hover.delay": 600,
@@ -184,6 +183,8 @@
     "anynomisation",
     "APAC",
     "Atlassian",
+    "audiobook",
+    "audiobooks",
     "autoanálisis",
     "autogestión",
     "bluetooth",
@@ -229,6 +230,7 @@
     "kubectl",
     "kubernetes",
     "lockdown",
+    "Lucidchart",
     "macronutrient",
     "macronutrients",
     "Mbps",
