vscode(cSpell): document config

--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -167,7 +167,7 @@
     "restructuredtext",
     "text",
   ],
-  "cSpell.enableFiletypes": [
+  "cSpell.enableFiletypes": [  // use this to disable spellcheck
     "!asciidoc",
     "!restructuredtext",
     "markdown",
