vscode: update user dictionary

--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -189,6 +189,7 @@
     "autoanálisis",
     "autogestión",
     "bluetooth",
+    "cloudflare",
     "Colbourne",
     "Conor",
     "cookiecutter",
@@ -216,6 +217,7 @@
     "Hasura",
     "hiru",
     "HMRC",
+    "hypopressive",
     "Ibai",
     "idempotency",
     "immunosuppressed",
@@ -235,6 +237,7 @@
     "macronutrient",
     "macronutrients",
     "Mbps",
+    "microbatch",
     "microservice",
     "microservices",
     "microsevice",
