--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -307,6 +307,10 @@
     "Zwiessele"
   ],
 
+  "errorLens.excludePatterns": [
+    "**/*.{md}",
+  ],
+
   "gitlens.advanced.messages": {
     "suppressGitDisabledWarning": true
   },
