--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -90,5 +90,8 @@ set-option -g status-style "bg=#333333,fg=#bbbbbb"
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# TMUX plugin manager (keep this at the very bottom of tmux.conf)
+# install it if it's missing
+run-shell "if [ ! -d ~/.tmux/plugins/tpm ]; then echo ''; echo 'tmux plugin manager (TPM) is not installed'; echo 'installing TMP from https://github.com/tmux-plugins/tpm'; git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm; else echo 'tmux plugin manager is installed'; fi"
+# initialize it
 run -b '~/.tmux/plugins/tpm/tpm'
