vscode: do not ignore whitespaces on diffs

--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -2,6 +2,7 @@
   "breadcrumbs.enabled": true,
 
   "css.validate": false,
+  "diffEditor.ignoreTrimWhitespace": false,
   "diffEditor.renderIndicators": true,
   "diffEditor.renderSideBySide": true,
   "editor.hover.delay": 600,
