--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -7,6 +7,7 @@
   "diffEditor.renderSideBySide": true,
   "editor.hover.delay": 600,
   "editor.inlayHints.enabled": "offUnlessPressed",
+  "editor.lineNumbers": "relative",
   "editor.minimap.enabled": false,
   "editor.renderWhitespace": "boundary",
   "editor.rulers": [ 80, 109 ],
