alacritty: upgrade to latest schema

--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,3 +1,4 @@
+[general]
 # Themes
 # pick one from https://github.com/alacritty/alacritty-theme
 import = [                                                      # type  | contrast |
