tmux: remove unused plugins

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -87,8 +87,8 @@ set-option -g status-style "bg=#333333,fg=#bbbbbb"
 
 # tmux plugins
 # To install plugins: C-b C-I   uppercase I !!
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # TMUX plugin manager (keep this at the very bottom of tmux.conf)
 # install it if it's missing
