vscode: update user dictionary

--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -184,12 +184,15 @@
     "anymore",
     "anynomisation",
     "APAC",
+    "archlinux",
     "Atlassian",
     "audiobook",
     "audiobooks",
     "autoanálisis",
     "autogestión",
+    "beltz",
     "bluetooth",
+    "bost",
     "cloudflare",
     "Colbourne",
     "Conor",
@@ -198,6 +201,7 @@
     "COVID",
     "CQRS",
     "CSRF",
+    "csvq",
     "datagram",
     "datagrams",
     "datastore",
@@ -211,13 +215,17 @@
     "envrc",
     "Eyeo",
     "Farisha",
+    "filesystems",
+    "FOSS",
     "GDPR",
     "Goitia",
     "Grafana",
     "hardcoded",
     "Hasura",
+    "Hetzner",
     "hiru",
     "HMRC",
+    "homelab",
     "hypopressive",
     "Ibai",
     "idempotency",
@@ -259,6 +267,7 @@
     "performant",
     "pipenv",
     "PKGBUILD",
+    "podman",
     "Poliamor",
     "poliamorosa",
     "poliamoroso",
@@ -270,10 +279,12 @@
     "pyproject",
     "pytest",
     "React's",
+    "reddit",
     "repos",
     "resizeable",
     "restructuration",
     "Revolut",
+    "ripgrep",
     "románticamente",
     "sapiosexual",
     "Scrapy",
@@ -288,6 +299,7 @@
     "Terraform",
     "timesheet",
     "timesheets",
+    "timeshift",
     "tmux",
     "Torralba",
     "TOTP",
@@ -304,7 +316,9 @@
     "wipman",
     "Xero",
     "xmonad",
+    "zeru",
     "Zopa",
+    "zuri",
     "Zwiessele"
   ],
 
