t: add OVB entries

--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -33,6 +33,15 @@
       "workspace_id": 1819588
     },
     {
+      "id": 207664799,
+      "name": "OVB",
+      "entries": [
+        "Training",
+        "Meeting"
+      ],
+      "workspace_id": 1819588
+    },
+    {
       "id": 193300215,
       "name": "Social",
       "entries": [
