t: add entry for study

--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -3,7 +3,7 @@
     {
       "id": 28787086,
       "name": "Learn and study",
-      "entries": ["Coding", "Study coding", "Drawing", "Mentoring"],
+      "entries": ["Coding", "Study coding", "Drawing", "Mentoring", "Study"],
       "workspace_id": 1819588
     },
     {
