vscode: update user dictionary

--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -217,6 +217,7 @@
     "Eyeo",
     "Farisha",
     "filesystems",
+    "fiscalidad",
     "FOSS",
     "GDPR",
     "Goitia",
@@ -258,6 +259,8 @@
     "mismeasurement",
     "monkeypatching",
     "Monzo",
+    "mqtts",
+    "MQTTS",
     "multitenancy",
     "neighbour",
     "neighbours",
@@ -290,6 +293,7 @@
     "sapiosexual",
     "Scrapy",
     "SCSRE",
+    "semanitas",
     "shipcat",
     "smishing",
     "solutionize",
