--- a/pudb/.config/pudb/pudb.cfg
+++ b/pudb/.config/pudb/pudb.cfg
@@ -6,19 +6,20 @@ custom_stringifier =
 custom_theme = 
 default_variables_access_level = public
 display = auto
-hide_cmdline_win = False
+hide_cmdline_win = True
 hotkeys_breakpoints = B
 hotkeys_code = C
 hotkeys_stack = S
+hotkeys_toggle_cmdline_focus = ctrl x
 hotkeys_variables = V
 line_numbers = True
 prompt_on_quit = True
-seen_welcome = e044
+seen_welcome = e049
 shell = ipython
-sidebar_width = 0.8388608000000002
+sidebar_width = 0.6710886400000001
 stack_weight = 1
 stringifier = str
-theme = agr-256
-variables_weight = 4.76837158203125
+theme = nord-dark-256
+variables_weight = 5.9604644775390625
 wrap_variables = True
 
